<resources>
    <string name="app_name" translatable="false">Sleep Tracker Recycler</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="clear_all">Clear all</string>
    <string name="sleep_nights_list">Sleep nights list</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="sleep_quality">Sleep quality:</string>
    <string name="_sleep_quality">Sleep quality</string>
    <string name="total_time">Total time:</string>
    <string name="very_poor">Very poor</string>
    <string name="poor">Poor</string>
    <string name="ok">OK</string>
    <string name="good">Good</string>
    <string name="very_good">Very good</string>
    <string name="excellent">Excellent</string>
    <string name="current">Current</string>
    <string name="choose_sleep_quality">Choose sleep quality</string>
    <string name="quality_0">Sleep quality 0</string>
    <string name="quality_1">Sleep quality 1</string>
    <string name="quality_2">Sleep quality 2</string>
    <string name="quality_3">Sleep quality 3</string>
    <string name="quality_4">Sleep quality 4</string>
    <string name="quality_5">Sleep quality 5</string>
    <string name="no_nights">No tracked nights</string>
    <string name="change_language">Change language</string>
    <string name="exit">Exit</string>
    <string name="cleared">Cleared successfully</string>
    <string name="night_details">Night details</string>
    <string name="delete">Delete</string>
    <string name="you_slept">You slept:</string>
    <string name="at">at</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="want_delete_item">Do you want to delete this night?</string>
    <string name="want_clear_all">Do you want to clear all the nights?</string>
    <string name="cancel">Cancel</string>
    <string name="change_layout">Change items layout</string>
</resources>