<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.abdosharaf.sleeptrackerrecycler.qualityScreen.QualityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_16dp"
        tools:context=".qualityScreen.QualityFragment">

        <TextView
            android:id="@+id/tvQualityTitle"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_sleep_quality"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <ImageView
            android:id="@+id/quality_zero_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/quality_0"
            android:onClick="@{() -> viewModel.setSleepQuality(0)}"
            app:layout_constraintEnd_toStartOf="@+id/quality_one_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:srcCompat="@drawable/ic_sleep_0" />

        <ImageView
            android:id="@+id/quality_one_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/quality_1"
            android:onClick="@{() -> viewModel.setSleepQuality(1)}"
            app:layout_constraintEnd_toStartOf="@+id/quality_two_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/quality_zero_image"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:srcCompat="@drawable/ic_sleep_1" />

        <ImageView
            android:id="@+id/quality_two_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/quality_2"
            android:onClick="@{() -> viewModel.setSleepQuality(2)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/quality_one_image"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:srcCompat="@drawable/ic_sleep_2" />

        <ImageView
            android:id="@+id/quality_three_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/quality_3"
            android:onClick="@{() -> viewModel.setSleepQuality(3)}"
            android:layout_marginTop="@dimen/_16dp"
            app:layout_constraintEnd_toStartOf="@+id/quality_four_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quality_one_image"
            app:srcCompat="@drawable/ic_sleep_3" />

        <ImageView
            android:id="@+id/quality_four_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/quality_4"
            android:onClick="@{() -> viewModel.setSleepQuality(4)}"
            android:layout_marginTop="@dimen/_16dp"
            app:layout_constraintEnd_toStartOf="@+id/quality_five_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/quality_three_image"
            app:layout_constraintTop_toBottomOf="@+id/quality_one_image"
            app:srcCompat="@drawable/ic_sleep_4" />

        <ImageView
            android:id="@+id/quality_five_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/quality_5"
            android:layout_marginTop="@dimen/_16dp"
            android:onClick="@{() -> viewModel.setSleepQuality(5)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/quality_four_image"
            app:layout_constraintTop_toBottomOf="@+id/quality_one_image"
            app:srcCompat="@drawable/ic_sleep_5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>