<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16dp"
        android:background="@drawable/item_night_background"
        android:orientation="vertical"
        android:padding="@dimen/_16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4dp"
                android:text="@string/start_date" />

            <TextView
                android:id="@+id/tvStartTime"
                style="@style/item_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12:05 Am" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4dp"
                android:text="@string/end_date" />

            <TextView
                android:id="@+id/tvEndTime"
                style="@style/item_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12:05 Am" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4dp"
                android:text="@string/total_time" />

            <TextView
                android:id="@+id/tvTotalTime"
                style="@style/item_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2 days 5 hours 15 minutes" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4dp"
                android:text="@string/sleep_quality" />

            <TextView
                android:id="@+id/tvSleepQuality"
                style="@style/item_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Excellent" />

        </LinearLayout>

    </LinearLayout>
</layout>