<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_night_background">

        <TextView
            android:id="@+id/tvDialogTitle"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_marginTop="@dimen/_32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDialogText"
            style="@style/dialog_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/want_delete_item"
            app:layout_constraintBottom_toTopOf="@+id/btnDialogCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDialogDelete"
            style="@style/red_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_32dp"
            android:text="@string/delete"
            android:layout_marginBottom="@dimen/_32dp"
            android:layout_marginEnd="@dimen/_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnDialogCancel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDialogCancel"
            style="@style/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginStart="@dimen/_16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnDialogDelete"
            app:layout_constraintEnd_toStartOf="@+id/btnDialogDelete"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>