<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.abdosharaf.sleeptrackerrecycler.listScreen.ListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/_16dp"
        android:paddingEnd="@dimen/_16dp"
        tools:context=".listScreen.ListFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNights"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_8dp"
            android:clipToPadding="false"
            android:paddingTop="@dimen/_16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/btnStartTrack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_night" />

        <LinearLayout
            android:id="@+id/emptyState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnStartTrack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:contentDescription="@string/no_nights"
                app:srcCompat="@drawable/no_data_amico" />

            <TextView
                style="@style/empty_state_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/no_nights" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/btnStartTrack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnStartTrack"
            style="@style/main_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32dp"
            android:layout_marginBottom="@dimen/_8dp"
            android:enabled="@{viewModel.showStartButton}"
            android:onClick="@{() -> viewModel.startTracking()}"
            android:text="@string/start"
            app:layout_constraintBottom_toTopOf="@+id/btnClear"
            app:layout_constraintEnd_toStartOf="@+id/btnStopTrack"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnStopTrack"
            style="@style/main_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="@{viewModel.showStopButton}"
            android:onClick="@{() -> viewModel.stopTracking()}"
            android:text="@string/stop"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnStartTrack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnStartTrack" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClear"
            style="@style/red_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16dp"
            android:enabled="@{viewModel.showClearButton}"
            android:text="@string/clear_all"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>